compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__numbers__constant_variable_assignment.snap
---
source: compiler-core/src/fsharp/tests/numbers.rs
assertion_line: 28
expression: "\nconst a = 3\n"
---
module my.mod
[<Literal>]
let a = 3
