compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__numbers__float_negation.snap
---
source: compiler-core/src/fsharp/tests/numbers.rs
assertion_line: 82
expression: "\npub fn main() {\n  let a = -3.0\n  let b = a\n  0\n}\n"
---
module rec my.``mod``
let main(): int = begin
    let a = -3.0
    let b = -a
    0
end
