compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__numbers__numbers_with_underscores.snap
---
source: compiler-core/src/fsharp/tests/numbers.rs
assertion_line: 5
expression: "\npub fn main() {\n  100_000\n  100_000.00101\n}\n"
---
module rec my.``mod``
let main (): float = begin
    100_000
    100_000.00101
end
