compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__numbers__simple_variable_assignment.snap
---
source: compiler-core/src/fsharp/tests/numbers.rs
assertion_line: 5
expression: "\npub fn main() {\n  let a = 3\n}\n"
---
module my.mod
let main (): int = begin
    let a = 3
    a
end
