compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__numbers__zero_b_in_hex.snap
---
source: compiler-core/src/fsharp/tests/numbers.rs
expression: "\npub fn foo() {\n  0xffe0bb\n}\n"
---
module rec my.``mod``
let foo () = begin
    0xffe0bbL
end
